2009-11-20  Tassilo Horn  <tassilo@member.fsf.org>

	* progmodes/cc-cmds.el (c-forward-into-nomenclature)
	(c-backward-into-nomenclature): Adapt to subword renaming.

	* subword.el (subword-forward, subword-backward, subword-mark)
	(subword-kill, subword-backward-kill, subword-transpose)
	(subword-downcase, subword-upcase, subword-capitalize)
	(subword-forward-internal, subword-backward-internal): Renamed
	from forward-subword, backward-subword, mark-subword kill-subword,
	backward-kill-subword, transpose-subwords, downcase-subword,
	upcase-subword, capitalize-subword forward-subword-internal,
	backward-subword-internal.

2009-11-20  Thierry Volpiatto  <thierry.volpiatto@gmail.com>

	* bookmark.el (bookmark-search-delay, bookmark-search-prompt): New
	options.
	(bookmark-search-pattern, bookmark-search-timer, bookmark-quit-flag):
	New vars.
	(bookmark-read-search-input, bookmark-filtered-alist-by-regexp-only)
	(bookmark-bmenu-filter-alist-by-regexp)
	(bookmark-bmenu-goto-bookmark, bookmark-bmenu-cancel-search): New funs.
	(bookmark-bmenu-search): New command.
	(bookmark-bmenu-mode-map): Bind it.

2009-11-20  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/semantic/complete.el (semantic-complete-inline-map): Doc fix.

	* cedet/semantic/idle.el (define-semantic-idle-service)
	(semantic-idle-summary-mode, semantic-idle-completions): Doc fix.

2009-11-20  Tassilo Horn  <tassilo@member.fsf.org>

	* progmodes/cc-cmds.el: declare-functioned forward-subword and
	backward-subword to quit the byte-compiler.

	* makefile.w32-in: Don't refer cc-subword.elc but subword.elc.

	* Makefile.in: Don't refer cc-subword.elc but subword.elc.

	* progmodes/cc-cmds.el (c-update-modeline)
	(c-forward-into-nomenclature, c-backward-into-nomenclature):
	Refer to subword.el functions instead of cc-subword.el.

	* progmodes/cc-mode.el (subword-mode, c-mode-base-map): Refer to
	subword.el functions instead of cc-subword.el.

	* progmodes/cc-subword.el: Rename to subword.el.